<resources>
    <string name="app_name">SimpleTodo</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_item">Add a new item...</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="save">Save</string>
    <string name="edit_item_text">Edit Item Below:</string>
    <string name="main_activity_label">Todo List</string>
    <string name="edit_item_activity_label">Edit Item</string>
    <string name="title_activity_detail_item">Item Detail</string>
    <string name="title_activity_new_item">New Todo Item</string>
    <string name="tv_name">Name</string>
    <string name="tv_due_date">Due Date</string>
    <string name="tv_notes">Notes</string>
    <string name="tv_priority">Priority</string>
    <string name="tv_status">Status</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="status_new_color">#E67E22</string>
    <string name="status_in_progress_color">#6C3483</string>
    <string name="status_done_color">#1E8449</string>
    <string name="priority_high_color">#A93226</string>
    <string name="priority_medium_color">#B7950B</string>
    <string name="priority_low_color">#2874A6</string>

    <string-array name="sortBy">
        <item>Sort By...</item>
        <item>Due Date</item>
        <item>Priority</item>
        <item>Status</item>
        <item>Name</item>
    </string-array>
</resources>
