<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.DetailItemActivity"
    tools:showIn="@layout/activity_detail_item"
    android:weightSum="1">
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/llName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvName"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name-Value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toLeftOf="@+id/tvName"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvNameVal"
            android:layout_gravity="center_vertical" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/llDueDate"
        android:layout_below="@+id/llName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_due_date"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvDueDate"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Due-Date"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toLeftOf="@+id/tvDueDate"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvDueDateVal"
            android:layout_gravity="center_vertical" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/llNotes"
        android:layout_below="@+id/llDueDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_notes"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvNotes"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="notes-Value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toLeftOf="@+id/tvNotes"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvNotesVal"
            android:layout_gravity="center_vertical" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/llPriority"
        android:layout_below="@+id/llNotes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_priority"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvPriority"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Priority-Value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toLeftOf="@+id/tvPriority"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvPriorityVal"
            android:layout_gravity="center_vertical" />
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/llStatus"
        android:layout_below="@+id/llPriority"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_status"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvStatus"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status-Value"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toLeftOf="@+id/tvStatus"
            style="@android:style/TextAppearance.Medium"
            android:textStyle="bold"
            android:id="@+id/tvStatusVal"
            android:layout_gravity="center_vertical" />
    </RelativeLayout>
</LinearLayout>
